fix word wrap on ie11

--- a/src/search/views/RecordDetailsView.css
+++ b/src/search/views/RecordDetailsView.css
@@ -8,4 +8,8 @@
 
 .record-details-title {
   overflow-wrap: break-word;
+  /*IE11 fixes*/
+  word-wrap: break-word;
+  float: left;
+  width: 100%;
 }
